5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4343/executions/1644_2447.log
== SUBMITION (2019-04-16 15:41:05) 
-- CODE:
preco = float(input("Qual o preco da sua compra?"))
pagamento = float(input("Quanto voce pagou?"))

if(preco>pagamento):
	mensagem = "Falta" + srt(preco-pagamento)
else:
	mensagem = "Troco de" + srt(pagamento-preco)
print ( mensagem )
-- EXECUTION TIME:
0.165544
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2447/main.py", line 5, in <module>
    mensagem = "Falta" + srt(preco-pagamento)
NameError: name 'srt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:43:42) 
-- CODE:
preco = float (input("Qual o preco da sua compra?"))
pagamento = float(input("Quanto voce pagou?"))

if(preco>pagamento):
	mensagem = "Falta " + srt (pagamento-preco)
else:
	mensagem = "Troco de " + srt (pagamento-preco)
	
print(mensagem)
-- EXECUTION TIME:
0.231591
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2447/main.py", line 5, in <module>
    mensagem = "Falta " + srt (pagamento-preco)
NameError: name 'srt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:43:46) 
-- CODE:
preco = float (input("Qual o preco da sua compra?"))
pagamento = float(input("Quanto voce pagou?"))

if(preco>pagamento):
	mensagem = "Falta " + srt (pagamento-preco)
else:
	mensagem = "Troco de " + srt (pagamento-preco)
	
print(mensagem)
-- EXECUTION TIME:
0.176671
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2447/main.py", line 5, in <module>
    mensagem = "Falta " + srt (pagamento-preco)
NameError: name 'srt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:43:57) 
-- CODE:
preco = float (input("Qual o preco da sua compra?"))
pagamento = float(input("Quanto voce pagou?"))

if(preco>pagamento):
	mensagem = "Falta " + srt (pagamento-preco)
else:
	mensagem = "Troco de " + srt (pagamento-preco)
print(mensagem)
-- EXECUTION TIME:
0.116745
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2447/main.py", line 5, in <module>
    mensagem = "Falta " + srt (pagamento-preco)
NameError: name 'srt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:43:58) 
-- CODE:
preco = float (input("Qual o preco da sua compra?"))
pagamento = float(input("Quanto voce pagou?"))

if(preco>pagamento):
	mensagem = "Falta " + srt (pagamento-preco)
else:
	mensagem = "Troco de " + srt (pagamento-preco)
print(mensagem)
-- EXECUTION TIME:
0.177346
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2447/main.py", line 5, in <module>
    mensagem = "Falta " + srt (pagamento-preco)
NameError: name 'srt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:44:05) 
-- CODE:
preco = float (input("Qual o preco da sua compra?"))
pagamento = float(input("Quanto voce pagou?"))

if(preco>pagamento):
	mensagem = "Falta " + srt (pagamento-preco)
 else:
	mensagem = "Troco de " + srt (pagamento-preco)
 print(mensagem)
-- EXECUTION TIME:
0.195194
-- ERROR:
  File "/home/codebench/codes/1644/2447/main.py", line 6
    else:
        ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:44:08) 
-- CODE:
preco = float (input("Qual o preco da sua compra?"))
pagamento = float(input("Quanto voce pagou?"))

if(preco>pagamento):
	mensagem = "Falta " + srt (pagamento-preco)
 else:
	mensagem = "Troco de " + srt (pagamento-preco)
print(mensagem)
-- EXECUTION TIME:
0.164426
-- ERROR:
  File "/home/codebench/codes/1644/2447/main.py", line 6
    else:
        ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:44:14) 
-- CODE:
preco = float (input("Qual o preco da sua compra?"))
pagamento = float(input("Quanto voce pagou?"))

if(preco>pagamento):
	mensagem = "Falta " + srt (pagamento-preco)
else:
	mensagem = "Troco de " + srt (pagamento-preco)
 print(mensagem)
-- EXECUTION TIME:
0.139763
-- ERROR:
  File "/home/codebench/codes/1644/2447/main.py", line 8
    print(mensagem)
                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
